--- a/style.css
+++ b/style.css
@@ -40,7 +40,7 @@ a {
 }
 
 .bg-2 {
-    background-color: #D6A2AD; /* Blue */
+    background-color: #D6A2AD; /* Pink */
     color: #D6A2AB;
 }
 
@@ -54,8 +54,8 @@ a {
 }
 
 .bg-3 {
-    background-color: #000000; /* Black */
-    color: #ffffff;
+    background-color: #F0D2D1; /* Black */
+    color: #F0D2D1;
 }
 
 .bg-4 {
